# synthesizer-io

./: .gitignore  AUTHORS  CONTRIBUTING.md  Cargo.toml  README.md
benches/: bench.rs
scope/: Cargo.toml
scope/examples/: scope.rs
scope/src/: lib.rs
spect/: Cargo.toml
spect/examples/: sigmoid.rs
spect/src/: colormap.rs  lib.rs
src/: graph.rs  lib.rs  main.rs  module.rs  queue.rs  worker.rs
src/modules/: biquad.rs  buzz.rs  const_ctrl.rs  mod.rs  note_pitch.rs  saw.rs  sin.rs  smooth_ctrl.rs  sum.rs
synthesizer-io-core/: Cargo.toml
synthesizer-io-core/benches/: bench.rs  sigmoid.rs
synthesizer-io-core/src/: engine.rs  graph.rs  id_allocator.rs  lib.rs  module.rs  queue.rs  worker.rs
synthesizer-io-core/src/modules/: adsr.rs  biquad.rs  buzz.rs  const_ctrl.rs  gain.rs  mod.rs  monitor.rs  note_pitch.rs  saw.rs  sin.rs  smooth_ctrl.rs  sum.rs
synthesizer-io-wasm/: Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
synthesizer-io-wasm/src/: lib.rs
synthesizer-io-win/: Cargo.toml
synthesizer-io-win/src/: grid.rs  main.rs  synth.rs
synthesizer-io-win/src/ui/: mod.rs  patcher.rs  piano.rs  scope.rs
web/: index.html  ui.js
