[package]
name = "synthesizer-io"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]

[dependencies]
time = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.9"
coremidi = "0.3"

[target.'cfg(not(target_os = "macos"))'.dependencies]
cpal = "0.8.2"
midir = "0.5.0"

[dependencies.synthesizer-io-core]
path = "./synthesizer-io-core"
