[package]
name = "synthesizer-io-win"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
license = "Apache 2.0"
description = "Windows UI synthesizer app"

[dependencies]
time = "0.1"
itertools = "0.7.8"
cpal = "0.8.2"
midir = "0.5.0"
direct2d = "0.1.3"
xi-win-ui = { git = "https://github.com/xi-editor/xi-win" }
xi-win-shell = { git = "https://github.com/xi-editor/xi-win" }

[dependencies.synthesizer-io-core]
path = "../synthesizer-io-core"
