[package]
name = "synthesizer-io-win"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
license = "Apache 2.0"
description = "Windows UI synthesizer app"

[dependencies]
time = "0.1"
itertools = "0.7.8"
union-find = "0.3.2"
cpal = "0.8.2"
midir = "0.5.0"
direct2d = "0.2.0"
directwrite = "0.1"
druid = { git = "https://github.com/xi-editor/druid" }
druid-win-shell = { git = "https://github.com/xi-editor/druid" }

# The following two are only for datatypes consumed by direct2d; should
# ultimately disappear
winapi = "0.3.6"
dxgi = "0.1.7"

[dependencies.synthesizer-io-core]
path = "../synthesizer-io-core"

[dependencies.synthesize-scope]
path = "../scope"
